# LA-Mesh

./: .bazelrc  .env.template  .markdownlint-cli2.yaml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  SCAFFOLD-REPORT.md  SPRINT_PLAN.md  cliff.toml  flake.nix  justfile  package.json  pnpm-lock.yaml  renovate.json5
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: device-issue.yml  network-issue.yml
.github/workflows/: build-firmware.yml  ci.yml  deploy-pages.yml  firmware-check.yml  firmware-watch.yml  security-scan.yml
bridges/: README.md
bridges/email/: bridge.env.template  email_bridge.py  gpg_utils.py
bridges/mqtt/: mqtt-bridge-config.yaml
bridges/sms/: bridge.env.template  sms_bridge.py
bridges/systemd/: lamesh-email-bridge.service  lamesh-sms-bridge.service
configs/backups/: backup-20260212-114038.yaml
configs/channels/: la-mesh-default.yaml
configs/profiles/: meshadv-mini-gateway.yaml  mqtt-gateway.yaml  station-g2-router.yaml  tdeck-plus-client.yaml  tdeck-pro-eink-client.yaml
curriculum/mesh-basics/: README.md
curriculum/sdr/: README.md
curriculum/security/: README.md
curriculum/tails/: README.md
docs/: hardware-deep-dive.md
docs/architecture/: adr-001-firmware-choice.md  adr-002-meshcore-evaluation.md  adr-003-network-topology.md  adr-004-encryption-scheme.md  adr-005-mqtt-broker.md  (+9 more)
firmware/: manifest.json
hardware/: bom.md  inventory.md  procurement-tracker.md
research/: TAILS-SecComms-Curriculum-Report.md  meshadv-mini-sms-email-bridge-report.md
site/: package.json  svelte.config.js  vite.config.ts
(+76 files in other folders)
